--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -1,8 +1,8 @@
-from python:3.13.11-slim
+FROM python:3.13.11-slim
 # Copy uv binary from official uv image (multi-stage build pattern)
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/
 
-workdir /code
+WORKDIR /code
 
 ENV PATH="/app/.venv/bin:$PATH"
 
@@ -10,4 +10,4 @@ COPY "pyproject.toml" "uv.lock" ".python-version" ./
 RUN uv sync --locked 
 
 COPY pipeline.py . 
-ENTRYPOINT ["python", "pipeline.py"]
+ENTRYPOINT ["uv", "run", "python", "ingest_data.py"]
